# memops

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  TEAM.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
demo/: README.md
docs/: README.md  api-notes.md  architecture.md  assumptions.md  demo-script.md  donation-readiness.md  evaluation-mapping.md
docs/releases/: v0.3.0.md
src/: README.md
src/memops/: __init__.py  __main__.py  cli.py  config.py
src/memops/backends/: __init__.py  contracts.py  mempool.py
src/memops/diagnostics/: __init__.py  fee_context.py  policy.py
src/memops/domain/: __init__.py
src/memops/services/: __init__.py  analysis.py  diagnosis.py  diagnosis_payloads.py  exports.py  inspection.py  policy.py  tx_parser.py
strategy/: README.md  business-model.md  impact-analysis.md  operating-model.md  pitch-script.md  problem.md  roadmap.md  worklog-link.md
tests/: README.md  test_analysis.py  test_backend_contracts.py  test_cli.py  test_cli_export_failure_paths.py  test_cli_export_mode.py  test_cli_export_validation.py  test_config.py  test_diagnosis_payloads.py  test_diagnosis_policy.py  test_diagnosis_service.py  test_export_service_workflows.py  test_exports_service.py  test_fee_context_service.py  test_fee_evidence_regressions.py  test_human_fee_evidence_outputs.py  test_inspection.py  test_mempool_backend.py  test_policy.py  test_tx_parser.py
