[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memops"
version = "0.1.0"
description = "Verification-first CLI for Bitcoin incident response"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer",
    "rich",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "embit",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memops"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["memops"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
