[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memops"
version = "0.1.0"
description = "Verification-first Bitcoin incident response CLI for mempool-compatible backends"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Cristian Garcia" }
]
keywords = [
    "bitcoin",
    "mempool",
    "cli",
    "incident-response",
    "rbf",
    "cpfp",
    "open-source",
]
dependencies = [
    "typer",
    "rich",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "embit",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memops"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["memops"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
